[package]
name = "rodbus-client"
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>>"]
edition = "2021"
description = "A command line program for making Modbus client requests using the Rodbus crate"
keywords = ["modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "README.md"

[[bin]]
name = "rodbus-client"
path = "src/main.rs"

[dependencies]
rodbus = { path = "../rodbus", default-features = false }
clap = "2.33"
tokio = { version = "1", features = ["macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
