[package]
name = "rodbus-client"
version = "1.4.0-M1"
authors = ["Step Function I/O LLC <info@stepfunc.io>>"]
edition = "2021"
description = "A command line program for making Modbus client requests using the Rodbus crate"
keywords = ["modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "README.md"

[[bin]]
name = "rodbus-client"
path = "src/main.rs"

[dependencies]
rodbus = { path = "../rodbus", default-features = false }
clap = "2.33"
tokio = { workspace = true, features = ["macros", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
