[package]
name = "rodbus-client"
version = "1.4.0"
description = "A command line program for making Modbus client requests using the Rodbus crate"
readme = "README.md"

# inherit from workspace
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "rodbus-client"
path = "src/main.rs"

[dependencies]
rodbus = { path = "../rodbus", default-features = false }
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
