[package]
name = "rodbus-ffi"
version = "0.1.0"
authors = ["Adam Crain <jadamcrain@automatak.com>", "Émile Grégoire <emile@automatak.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "C bindings for the Rodbus crate"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://www.github.com/grid-io/rodbus"

[dependencies]
rodbus = { path = "../rodbus" }
tokio = { version = "0.2", features = ["full"]}
log = "0.4"

[lib]
crate-type = ["cdylib"]


