[package]
name = "rodbus-ffi"
version = "0.1.1"
authors = ["Adam Crain <jadamcrain@automatak.com>", "Émile Grégoire <emile@automatak.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "C bindings for the Rodbus crate"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://www.github.com/automatak/rodbus"
readme = "../README.md"

[dependencies]
rodbus = { version = "0.1.1", path = "../rodbus" }
tokio = { version = "^0.2.5", features = ["rt-threaded"]}
log = { version = "0.4", features = ["std"] }

[lib]
crate-type = ["cdylib"]
