[package]
name = "rodbus"
version = "1.4.0"
description = "A high-performance async implementation of the Modbus protocol using tokio"
readme = "README.md"

# inherit from workspace
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
crc = "3"
scursor = "0.2.0"
tokio = { workspace = true, features = ["net", "sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

# TLS dependencies
rx509 = { version = "0.2", optional = true }
sfio-rustls-config = { version = "0.3.2", optional = true }
tokio-rustls = { version = "0.26.0", features = ["tls12"], default-features = false, optional = true }

# serial dependencies
tokio-serial = { version = "5.4", default-features = false, optional = true }

# serialize dependencies
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}

[dev-dependencies]
tokio-test = "0.4"
sfio-tokio-mock-io = "0.2"

[features]
default = ["tls", "serial"]
ffi = []
tls = ["rx509", "sfio-rustls-config", "tokio-rustls"]
serial = ["tokio-serial"]
serialization = ["serde"]
