[package]
name = "example-perf"
version = "1.5.0-RC1"

# inherit from workspace
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
rodbus = { path = "../../rodbus", features = ["tls", "serial"] }
clap = { version = "4.1.8", features = ["derive"] }
tokio = { workspace = true, features = ["net", "sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["tls", "serial"]
tls = []
serial = []
