[package]
name = "rodbus-bindings"
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "oobindgen schema for Rodbus"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[dependencies]
oo-bindgen = "0.8"
rodbus-schema = { path = "../rodbus-schema" }
tracing = "^0.1"
tracing-subscriber = "^0.3"

