[package]
name = "rodbus-bindings"
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "oobindgen schema for Rodbus"
keywords = ["ffi", "c", "modbus", "industrial", "plc"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[dependencies]
oo-bindgen = { workspace = true }
rodbus-schema = { path = "../rodbus-schema" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

