[package]
name = "rodbus-bindings"
version = "1.4.0-RC1"
description = "application to generate bindings for Rodbus"
readme = "../README.md"

# inherit from workspace
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
oo-bindgen = { workspace = true }
rodbus-schema = { path = "../rodbus-schema" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

