[package]
name = "rodbus-ffi-java"
version = "1.1.0-rc1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
rodbus-ffi = { path = "../rodbus-ffi", default-features = false }

[features]
default = ["serial", "tls"]
serial = ["rodbus-ffi/serial"]
tls = ["rodbus-ffi/tls"]

[build-dependencies]
rodbus-schema = { path = "../rodbus-schema" }
java-oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", tag = "0.5.0" }