[package]
name = "rodbus-ffi-java"
version = "1.4.0"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
rodbus-ffi = { path = "../rodbus-ffi", default-features = false }

[features]
default = ["serial", "tls"]
serial = ["rodbus-ffi/serial"]
enable-tls = []
tls = ["enable-tls", "rodbus-ffi/tls"]
tls-aws-lc = ["enable-tls", "rodbus-ffi/tls-aws-lc"]

[build-dependencies]
rodbus-schema = { path = "../rodbus-schema" }
oo-bindgen = { workspace = true }
