[package]
name = "rodbus-ffi"
version = "1.1.0-rc2"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "FFI for Rodbus"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.2"
rodbus = { path = "../../rodbus", default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"]}
num_cpus = "1"

[build-dependencies]
rodbus-schema = { path = "../rodbus-schema" }
oo-bindgen = "0.6"
sfio-tracing-ffi = "0.5"
sfio-tokio-ffi = "0.5"


[features]
default = ["serial", "tls"]
serial = ["rodbus/serial"]
tls = ["rodbus/tls"]
