[package]
name = "rodbus-ffi"
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "FFI for Rodbus"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.2"
rodbus = { path = "../../rodbus", default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"]}
num_cpus = "1"
sfio-promise = "0.2"

[build-dependencies]
rodbus-schema = { path = "../rodbus-schema" }
oo-bindgen = "0.8"
sfio-tracing-ffi = "0.8"
sfio-tokio-ffi = "0.8"


[features]
default = ["serial", "tls"]
serial = ["rodbus/serial"]
tls = ["rodbus/tls"]
