[package]
name = "rodbus-ffi"
version = "1.5.0-RC1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "FFI for Rodbus"
keywords = ["ffi", "c", "modbus", "industrial", "plc"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { workspace = true, features = ["json", "chrono"] }
rodbus = { path = "../../rodbus", default-features = false, features = ["ffi"] }
tokio = { workspace = true, features = ["rt-multi-thread"]}
num_cpus = "1"
sfio-promise = "0.2"

[build-dependencies]
rodbus-schema = { path = "../rodbus-schema" }
oo-bindgen = { workspace = true }
sfio-tokio-ffi = { workspace = true }
sfio-tracing-ffi = { workspace = true }


[features]
default = ["serial", "tls"]
serial = ["rodbus/serial"]
enable-tls = []
tls = ["enable-tls", "rodbus/tls"]
tls-aws-lc = ["enable-tls", "rodbus/tls-aws-lc"]
