[package]
name = "rodbus-schema"
# this is the version that all the FFI libraries get, since it's in their schema
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "oobindgen schema for Rodbus"
keywords = ["ffi", "c", "modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[dependencies]
oo-bindgen = "0.8"
sfio-tokio-ffi = "0.8"
sfio-tracing-ffi = "0.8"
