[package]
name = "rodbus-schema"
# this is the version that all the FFI libraries get, since it's in their schema
version = "1.3.1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
description = "oobindgen schema for Rodbus"
keywords = ["ffi", "c", "modbus", "industrial", "plc"]
categories = ["network-programming"]
repository = "https://github.com/stepfunc/rodbus"
readme = "../README.md"

[dependencies]
oo-bindgen = { workspace = true }
sfio-tokio-ffi = { workspace = true }
sfio-tracing-ffi = { workspace = true }
