[package]
name = "rodbus-schema"
# this is the version that all the FFI libraries get, since it's in their schema
version = "1.4.0"
description = "oobindgen schema for Rodbus"
readme = "../README.md"

# inherit from workspace
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
oo-bindgen = { workspace = true }
sfio-tokio-ffi = { workspace = true }
sfio-tracing-ffi = { workspace = true }
